--- a/Modèles probabilistes discriminants pour le Machine Learning.ipynb
+++ b/Modèles probabilistes discriminants pour le Machine Learning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style ='color:red'>TP 4 : Modèles probabilistes discriminants pour le Machine Learning</span>"
+    "# <span style ='color:red'>Modèles probabilistes discriminants pour le Machine Learning</span>"
    ]
   },
   {
